# cse455-hw2

./: CMakeLists.txt  README.md
src/: filter_image.cpp  harris_image.cpp  image.h  load_image.cpp  matrix.cpp  matrix.h  panorama_image.cpp  process_image.cpp  resize_image.cpp  utils.cpp  utils.h
src/pango/: CMakeLists.txt  pango-utils.h  test2-harris.cpp  test2-panorama.cpp  test2-proj.cpp
src/test/: panorama.cpp  test0.cpp  test1.cpp  test2.cpp
vs/cse455-hw2/: cse455-hw2.sln  cse455-hw2.vcxproj
vs/cse455-hw2/make-panorama/: make-panorama.vcxproj  make-panorama.vcxproj.filters
vs/cse455-hw2/pango-harris/: pango-harris.vcxproj  pango-harris.vcxproj.filters
vs/cse455-hw2/pango-panorama/: pango-panorama.vcxproj  pango-panorama.vcxproj.filters
vs/cse455-hw2/pango-projection/: pango-projection.vcxproj  pango-projection.vcxproj.filters
vs/cse455-hw2/test0/: test0.vcxproj  test0.vcxproj.filters
vs/cse455-hw2/test1/: test1.vcxproj
vs/cse455-hw2/test2/: test2.vcxproj
